// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimetableItem renders correctly 1`] = `
<div
  class="lecture purple"
>
  <div
    class="title"
  >
    
    Advanced Stuff
  
  </div>
   
  <div
    class="time"
  >
    
    1581318000000 - 1581323400000
  
  </div>
   
  <div
    class="info"
  >
    <div
      class="professor data icon-prepend icon"
    >
      <fa-icon-stub
        icon="user-alt"
      />
      
      Müller
    
    </div>
     
    <div
      class="room data icon-prepend icon"
    >
      <fa-icon-stub
        icon="map-marker-alt"
      />
      
      2/433
    
    </div>
  </div>
</div>
`;

exports[`TimetableItem renders correctly without professor 1`] = `
<div
  class="lecture purple"
>
  <div
    class="title"
  >
    
    Advanced Stuff
  
  </div>
   
  <div
    class="time"
  >
    
    1581318000000 - 1581323400000
  
  </div>
   
  <div
    class="info"
  >
    <!---->
     
    <div
      class="room data icon-prepend icon"
    >
      <fa-icon-stub
        icon="map-marker-alt"
      />
      
      2/433
    
    </div>
  </div>
</div>
`;

exports[`TimetableItem renders correctly without room 1`] = `
<div
  class="lecture purple"
>
  <div
    class="title"
  >
    
    Advanced Stuff
  
  </div>
   
  <div
    class="time"
  >
    
    1581318000000 - 1581323400000
  
  </div>
   
  <div
    class="info"
  >
    <div
      class="professor data icon-prepend icon"
    >
      <fa-icon-stub
        icon="user-alt"
      />
      
      Müller
    
    </div>
     
    <!---->
  </div>
</div>
`;
